--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "joi": "^14.3.1",
     "joi-to-swagger": "^3.1.0",
     "koa": "^2.6.2",
+    "koa-bodyparser": "^4.2.1",
     "koa-joi-swagger-ts": "^1.0.14",
     "koa-router": "^7.4.0",
     "koa2-swagger-ui": "^2.11.3",
     "lodash": "^4.17.11",
+    "log4js": "^4.0.0",
+    "mysql": "^2.16.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.12"
   },
   "devDependencies": {
     "@types/joi": "^14.0.1",
-    "@types/lodash": "^4.14.64",
     "@types/koa": "^2.0.48",
     "@types/koa-router": "^7.0.39",
+    "@types/lodash": "^4.14.64",
     "nodemon": "^1.18.9",
     "ts-node": "^8.0.1",
     "tslint": "^5.12.1",
