--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "sourceMap": true,
-    "noImplicitAny": false,
+    // "noImplicitAny": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
   },
