--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.3.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "koa": "^2.6.2",
@@ -19,6 +20,7 @@
     "koa2-swagger-ui": "^2.11.3",
     "lodash": "^4.17.11",
     "log4js": "^4.0.0",
+    "md5": "^2.2.1",
     "mysql": "^2.16.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.12"
