--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "log4js": "^4.0.0",
     "md5": "^2.2.1",
     "mysql": "^2.16.0",
+    "omit.js": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.12"
   },
